--- a/requirements_agentic_retrieval_unversioned.txt
+++ b/requirements_agentic_retrieval_unversioned.txt
@@ -1,10 +1,8 @@
+azure-search-documents
 azure-identity
-azure-ai-projects
-azure-ai-agents
-azure-ai-ml
-matplotlib
-python-dotenv
 openai
-jsonref
+aiohttp
+requests
+python-dotenv
 pillow
 jupyter
